# turtles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
actor-turtle/: README.md
command-turtle/: CMakeLists.txt  README.md  command-turtle.cpp  turtle.cpp  turtle.hpp
command-writer-either-turtle/: CMakeLists.txt  README.md  command-writer-either-turtle.cpp  turtle.cpp  turtle.hpp
either-monad-turtle/: CMakeLists.txt  Pose.cpp  Pose.hpp  README.md  either-monad-turtle.cpp  either-monad.hpp  turtle.cpp  turtle.hpp
include/: Pose.hpp  function-operations.hpp  nonconst-Pose.hpp  overload.hpp  test_fixtures.hpp
include/tfunc/: function-operations.hpp  overload.hpp
include/tfunc/functor/: flist.hpp
lib/: CMakeLists.txt  Pose.cpp  Pose.hpp
oo-turtle/: CMakeLists.txt  OOTurtle.cpp  OOTurtle.hpp  Pose.cpp  Pose.hpp  README.md  oo-turtle.cpp
optional-monad-turtle/: CMakeLists.txt  Pose.cpp  Pose.hpp  README.md  optional-monad-turtle.cpp  optional-monad.hpp  turtle.cpp  turtle.hpp
pipes-turtle/: CMakeLists.txt  Pose-with-turtle.cpp  Pose-with-turtle.hpp  Pose.cpp  Pose.hpp  README.md  TurtleState.hpp  pipes-turtle.cpp  turtle.cpp  turtle.hpp
promise-monad-turtle/: README.md
state-either-monad-turtle/: CMakeLists.txt  Pose.cpp  Pose.hpp  README.md  state-either-monad-turtle.cpp  state-either-monad.hpp  turtle.cpp  turtle.hpp
state-monad-turtle/: CMakeLists.txt  Pose.cpp  Pose.hpp  README.md  state-monad-turtle.cpp  state-monad.hpp  turtle.cpp  turtle.hpp
writer-class-turtle/: CMakeLists.txt  README.md  turtle.cpp  turtle.hpp  writer-class-turtle.cpp  writer-class.hpp
writer-either-monad-turtle/: CMakeLists.txt  README.md  turtle.cpp  turtle.hpp  writer-either-monad-turtle.cpp  writer-either-monad.hpp
writer-monad-turtle/: CMakeLists.txt  Writer.hpp  turtle.cpp  turtle.hpp  writer-monad-turtle.cpp  writer-monad.hpp
